--- a/app.json
+++ b/app.json
@@ -13,6 +13,10 @@
 				"description": "Aria2的密匙",
 				"value": ""
 			},
+			"Title": {
+				"description": "标题",
+				"value": ""
+			},
 			"Upload": {
 				"description": "上传文件夹名称，后面不需要加/",
 				"value": ""
