--- a/root/nginx.conf
+++ b/root/nginx.conf
@@ -22,7 +22,7 @@ http {
         
         
         server {
-        	    listen   8868;
+        	    listen   heroku_port;
                 server_name 0.0.0.0;
                 
     
