--- a/app.json
+++ b/app.json
@@ -17,6 +17,10 @@
 				"description": "标题",
 				"value": ""
 			},
+			"PORT": {
+				"description": "端口",
+				"value": ""
+			},
 			"Upload": {
 				"description": "上传文件夹名称，后面不需要加/",
 				"value": ""
