--- a/root/nginx.conf
+++ b/root/nginx.conf
@@ -42,7 +42,7 @@ http {
                 keepalive_timeout  65;
             	
                         
-            location /jsonrpc
+            location /
                 {
                     proxy_pass http://127.0.0.1:8080;
                     proxy_set_header Host $host;
@@ -58,7 +58,7 @@ http {
                     
                 }
 
-            location /ng
+            location /
                 {
                 index  index.html;
                 alias  /index/;
@@ -79,7 +79,7 @@ http {
                 }
 
 
-                  location /
+                  location /files
                 {
                     expires 12h;
                     proxy_buffering off;
