--- a/root/nginx.conf
+++ b/root/nginx.conf
@@ -42,7 +42,7 @@ http {
                 keepalive_timeout  65;
             	
                         
-            location /
+            location /jsonrpc
                 {
                     proxy_pass http://127.0.0.1:8080;
                     proxy_set_header Host $host;
@@ -58,7 +58,7 @@ http {
                     
                 }
 
-            location /
+            location /ng
                 {
                 index  index.html;
                 alias  /index/;
@@ -66,20 +66,10 @@ http {
                     
                 }
 
-                location /status/
-                {
-                    proxy_pass http://127.0.0.1:5000/;
-                    proxy_set_header Host 127.0.0.1;
-                    proxy_set_header X-Real-IP $remote_addr;
-                    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-                    proxy_set_header REMOTE-HOST $remote_addr;
-
-                    
-                    
-                }
+               
 
 
-                  location /files
+                  location /
                 {
                     expires 12h;
                     proxy_buffering off;
@@ -95,22 +85,7 @@ http {
 
                     
                 }
-              location /webdav
-                {
-                    dav_methods PUT DELETE MKCOL COPY MOVE;
-                    proxy_pass http://127.0.0.1:9184;
-                    proxy_set_header Host $host;
-                    proxy_set_header X-Real-IP $remote_addr;
-                    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-                    proxy_set_header REMOTE-HOST $remote_addr;
 
-                    add_header X-Cache $upstream_cache_status;
-                    add_header Cache-Control no-cache;
-                    
-
-    
-                }    
-            	
             }
           
   
