--- a/nginx.conf
+++ b/nginx.conf
@@ -45,17 +45,16 @@ http {
                         
             location /jsonrpc
                 {
+                    expires 12h;
+                    proxy_buffering off;
                     proxy_pass http://127.0.0.1:8080;
                     proxy_set_header Host $host;
                     proxy_set_header X-Real-IP $remote_addr;
                     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
                     proxy_set_header REMOTE-HOST $remote_addr;
-                    
-                    add_header X-Cache $upstream_cache_status;
 
-                  proxy_http_version 1.1;
-                  proxy_set_header Upgrade $http_upgrade;
-                  proxy_set_header Connection $connection_upgrade;
+                    add_header X-Cache $upstream_cache_status;
+                    add_header Cache-Control no-cache;
                     
                 }
 
@@ -67,17 +66,6 @@ http {
                     
                 }
 
-                location /status/
-                {
-                    proxy_pass http://127.0.0.1:5000/;
-                    proxy_set_header Host 127.0.0.1;
-                    proxy_set_header X-Real-IP $remote_addr;
-                    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-                    proxy_set_header REMOTE-HOST $remote_addr;
-
-                    
-                    
-                }
 
 
                   location /
@@ -95,22 +83,7 @@ http {
 
 
                     
-                }
-              location /webdav
-                {
-                    dav_methods PUT DELETE MKCOL COPY MOVE;
-                    proxy_pass http://127.0.0.1:9184;
-                    proxy_set_header Host $host;
-                    proxy_set_header X-Real-IP $remote_addr;
-                    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-                    proxy_set_header REMOTE-HOST $remote_addr;
-
-                    add_header X-Cache $upstream_cache_status;
-                    add_header Cache-Control no-cache;
-                    
-
-    
-                }    
+                } 
             	
             }
           
