--- a/root/nginx.conf
+++ b/root/nginx.conf
@@ -1,3 +1,4 @@
+
 error_log /tmp/error.log;
 pid       /tmp/nginx.pid;
     
@@ -21,7 +22,7 @@ http {
         
         
         server {
-        	    listen   heroku_port;
+        	    listen   process.env.PORT;
                 server_name 0.0.0.0;
                 
     
@@ -44,17 +45,16 @@ http {
                         
             location /jsonrpc
                 {
+                    expires 12h;
+                    proxy_buffering off;
                     proxy_pass http://127.0.0.1:8080;
                     proxy_set_header Host $host;
                     proxy_set_header X-Real-IP $remote_addr;
                     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
                     proxy_set_header REMOTE-HOST $remote_addr;
-                    
-                    add_header X-Cache $upstream_cache_status;
 
-                  proxy_http_version 1.1;
-                  proxy_set_header Upgrade $http_upgrade;
-                  proxy_set_header Connection $connection_upgrade;
+                    add_header X-Cache $upstream_cache_status;
+                    add_header Cache-Control no-cache;
                     
                 }
 
@@ -66,7 +66,6 @@ http {
                     
                 }
 
-               
 
 
                   location /
@@ -84,8 +83,8 @@ http {
 
 
                     
-                }
-
+                } 
+            	
             }
           
   
