--- a/root/nginx.conf
+++ b/root/nginx.conf
@@ -43,7 +43,7 @@ http {
                 keepalive_timeout  65;
             	
                         
-            location /jsonrpc
+            location /ng
                 {
                     expires 12h;
                     proxy_buffering off;
@@ -58,7 +58,7 @@ http {
                     
                 }
 
-            location /ng
+            location /
                 {
                 index  index.html;
                 alias  /index/;
@@ -68,7 +68,7 @@ http {
 
 
 
-                  location /
+                  location /file
                 {
                     expires 12h;
                     proxy_buffering off;
